@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <install>
+    <folders>${ROOT_CONF}/logrotate.d</folders>
     <folders>${SYSTEM_CONF}/proftpd</folders>
     <folders>${SYSTEM_CONF}/proftpd/backup</folders>
     <folders>${SYSTEM_CONF}/proftpd/working</folders>
     <copy_config>${SYSTEM_CONF}/proftpd/proftpd.conf</copy_config>
     <copy_config>${SYSTEM_CONF}/proftpd/proftpd.data</copy_config>
+    <copy_config if="'${FTPD_SERVER}' eq 'proftpd'" mode="0644" user="${ROOT_USER}" group="${ROOT_GROUP}">${ROOT_CONF}/logrotate.d/proftpd-basic</copy_config>
 </install>
