@@ -81,7 +81,6 @@ Group                      nogroup
 <Global>
   RootLogin                off
   TransferLog              /var/log/proftpd/xferlog
-  ExtendedLog              /var/log/proftpd/ftp_traff.log read,write traff
   PathDenyFilter           "\.quota$"
 </Global>
 
