@@ -2,7 +2,7 @@ PROFTPD_VERSION =
 
 FTPD_SNAME = proftpd
 FTPD_CONF_FILE = /etc/proftpd/proftpd.conf
-FTP_TRAFF_LOG_PATH = proftpd/ftp_traff.log
+FTPD_TRAFF_LOG_PATH = /var/log/proftpd/xferlog
 
 FTPD_PASSIVE_PORT_RANGE =
 
