@@ -336,7 +336,7 @@ sub reload
 
  Get VsFTPd traffic data
 
- Return hash Traffic data, die on failure
+ Return hash Traffic database, die on failure
 
 =cut
 
@@ -346,30 +346,38 @@ sub getTraffic
 
 	my $trafficDbPath = "$main::imscpConfig{'VARIABLE_DATA_DIR'}/ftp_traffic.db";
 
-	# Load traffic database
+	# Load traffic database (create it if needed)
 	tie my %trafficDb, 'iMSCP::Config', fileName => $trafficDbPath, nowarn => 1;
 
-	# Data source file
+	# Traffic data source file
 	my $trafficDataSrc = $self->{'config'}->{'FTPD_TRAFF_LOG_PATH'};
 
-	if(-f $trafficDataSrc && -s _) {
+	if(-f -s $trafficDataSrc) { # Process only if the file exists and is not empty
 		require File::Temp;
-		my $tmpFile = File::Temp->new();
 
-		# Create a snapshot of log file to process
-		iMSCP::File->new( filename => $trafficDataSrc)->moveFile($tmpFile) == 0 or die(sprintf(
-			'Could not move %s file to %s', $trafficDataSrc, $tmpFile
-		));
+		# Create snapshot of traffic data source file
+		my $tmpFile = File::Temp->new( UNLINK => 1 );
+		iMSCP::File->new( filename => $trafficDataSrc )->copyFile($tmpFile) == 0 or die(iMSCP::Debug::getLastError());
 
-		# Read and parse file (line by line)
-		$trafficDb{$2} += $1 while(<$tmpFile> =~ /^(?:[^\s]+\s){7}([\d]+)\s(?:[^\s]+\s){5}([^\s]+)/gmo);
+		# Reset traffic data source file
+		truncate($trafficDataSrc, 0) or die(sprintf('Could not truncate %s file: %s', $trafficDataSrc, $!));
+
+		# Extract traffic data from snapshot and add them in traffic database
+		open my $fh, '<', $tmpFile or die(sprintf('Could not open file: %s', $!));
+		while(<$fh>) {
+			$trafficDb{$2} += $1 if /^(?:[^\s]+\s){7}(\d+)\s(?:[^\s]+\s){5}[^\s]+\@([^\s]+)/gm;
+		}
+		close($fh);
+	} else {
+		debug(sprintf('No traffic data found in %s - Skipping', $trafficDataSrc));
 	}
 
 	# Schedule deletion of full traffic database. This is only done on success. On failure, the traffic database is kept
 	# in place for later processing. In such case, data already processed are zeroed by the traffic processor script.
-	$self->{'eventManager'}->register('afterVrlTraffic', sub {
+	$self->{'eventManager'}->register( 'afterVrlTraffic', sub {
 		-f $trafficDbPath ? iMSCP::File->new( filename => $trafficDbPath )->delFile() : 0
 	});
+
 	\%trafficDb;
 }
 
